--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -1,6 +1,6 @@
-<div class="app-body mb-5">
+<div class="app-body" style="overflow: hidden;">
   <main class="main d-flex align-items-center min-h">
-    <div class="container mt-5 p-2">
+    <div class="container pt-2">
       <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8">
           <div class="card position-relative">
