--- a/angular/src/app/views/user-profile/user-profile.component.html
+++ b/angular/src/app/views/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container profile-setting mb-5 mt-3 p-5">
   <div class="row">
-    <h3>Profile Setting</h3>
+    <h3>PROFILE SETTING</h3>
     <hr class="hrLine m-0">
   </div>
   <div class="row my-4">
